--- a/index.html
+++ b/index.html
@@ -1,46 +1,33 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>Linux Mint Projects</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Docs</title>
+    <link href="assets/css/style.css" rel="stylesheet">
+</head>
 
-<div id="container">
-
-    <div class="column">
-
-        <div>
-            <a href="/projects.html">
-                <i class="fa fa-laptop" aria-hidden="true" style="color:#159957;font-size:7rem"></i>
-            </a>
+<body>
+    <header>
+        <div class="brand">
+            <p>logo</p>
         </div>
-
-        <div class="text">
-            The <a href="/projects.html">Projects</a> page gives an overview of the different projects.
+        <div class="secondary-nav">
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Developers</a></li>
+            <li><a href="#">community</a></li>
         </div>
-    </div>
+    </header>
+    <nav>
+        <li>something</li>
+    </nav>
+    <main>
 
-    <div class="column">
-        <div>
-            <a href="/contributing.html">
-                <i class="fa fa-book" aria-hidden="true" style="color:#159957;font-size:7rem"></i>
-            </a>
-        </div>
+    </main>
+    <footer>
 
-        <div>
-            The <a href="/contributing.html">Contributing</a> page provides some pointers to how to contribute.
-        </div>
-    </div>
+    </footer>
+</body>
 
-    <div class="column">
-        <div>
-            <a href="/reference/git">
-                <i class="fa fa-pencil-square-o" aria-hidden="true" style="color:#159957;font-size:7rem"></i>
-            </a>
-        </div>
-
-        <div>
-            The <a href="/reference/git">Reference</a> page hosts the documentation for Cinnamon, which Cinnamon extension developers may find useful.
-        </div>
-    </div>
-</div>
-
+</html>
