added full docs functionality

--- a/index.html
+++ b/index.html
@@ -22,32 +22,11 @@
     </header>
     <section class="main-container">
         <!-- topics nav  -->
-        <nav>
-            <div class="topics-group">
-                <p class="topic-heading">heading</p>
-                <ul>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                </ul>
-            </div>
-            <div class="topics-group">
-                <p class="topic-heading">heading</p>
-                <ul>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                </ul>
-            </div>
-        </nav>
+        <nav></nav>
 
-        <main></main>
+        <main>
+            <div class="container"></div>
+        </main>
         <aside>
             <ul class="topic-nav">
                 <p class="heading">on this page</p>
@@ -60,7 +39,8 @@
             </ul>
         </aside>
     </section>
-    <footer></footer>
+    <script src="./assets/js/showdown.min.js"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
