add some cinnamon markdowns

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Docs</title>
+    <title>linuxmint|Documentation</title>
     <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 
@@ -15,8 +15,8 @@
             <p>Mint</p>
         </div>
         <div class="secondary-nav">
-            <li class="active"><a href="#">Projects</a></li>
-            <li><a href="#">Developers</a></li>
+            <li class="active"><a href="#">Documentation</a></li>
+            <li><a href="./pages/projects.html">Projects</a></li>
             <li><a href="#">community</a></li>
         </div>
     </header>
