--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,44 +1,9 @@
----
-title: Projects
-permalink: projects.html
-layout: default
----
-
-<div id="container">
-    <div class="column">
-        <div>
-          <a href="/cinnamon/">
-            <img src="/icons/projects/cinnamon-logo.svg" alt="" class="margin-right-1rem img-square-7rem">
-          </a>
-        </div>
-
-        <div>
-          The <a href="/cinnamon/">Cinnamon</a> page gives a list of projects which are part of Cinnamon Desktop Environment
-        </div>
+<section id="projects">
+  <h1>projects</h1>
+  <div class="project-container">
+    <div class="icon">
+      <img src="../icons/cinnamon-logo.svg" alt="cinnamon-logo" />
     </div>
-
-    <div class="column">
-
-        <div>
-          <a href="/mint/">
-            <img src="/icons/projects/mint-logo.svg" class="margin-right-1rem img-square-7rem">
-          </a>
-        </div>
-
-        <div>
-          The <a href="/mint/">Mint</a> page provides a list of projects which are part of Linux Mint software distribution
-        </div>
-    </div>
-
-    <div class="column">
-        <div>
-          <a href="/xapps/">
-            <img src="/icons/projects/xreader.svg" class="margin-right-1rem img-square-7rem">
-          </a>
-        </div>
-
-        <div>
-          The <a href="/xapps/">XApps</a> page provides a list of applications available across different Linux Mint variants
-        </div>
-    </div>
-</div>
+    <div class="description">this is cinnamon a desktop-environment</div>
+  </div>
+</section>
