added the projects page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>linuxmint|Documentation</title>
     <link href="assets/css/style.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -19,10 +20,10 @@
                 <a href="/index.html">Documentation</a>
             </li>
             <li>
-                <a hx-get="./pages/projects.html" hx-target=".main-container">Projects
+                <a href="./pages/projects.html">Projects
             </li>
             <li>
-                <a hx-get="./pages/community.html" hx-target=".main-container">community</a>
+                <a hx-get="/pages/community.html" hx-target=".main-container">community</a>
             </li>
         </div>
     </header>
@@ -36,12 +37,6 @@
         <aside>
             <p class="heading">on this page</p>
             <ul class="topic-nav">
-                <li class="parent">parent</li>
-                <li class="child">child</li>
-                <li class="child">child</li>
-                <li class="parent">parent</li>
-                <li class="child">child</li>
-                <li class="child">child</li>
             </ul>
         </aside>
     </section>
