added better styling
improved the markdown styles and added code highlightig

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>linuxmint|Documentation</title>
     <link href="assets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
+    <link rel="stylesheet" href="//unpkg.com/@catppuccin/highlightjs@1.0.1/css/catppuccin-latte.css">
+
 
 </head>
 
@@ -40,6 +44,8 @@
             </ul>
         </aside>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/languages/go.min.js"></script>
+
     <script src="./assets/lib/htmx.js"></script>
     <script src="./assets/lib/showdown.min.js"></script>
     <script src="./assets/js/app.js"></script>
