--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="secondary-nav" hx-push-url="true">
             <li class="active">
-                <a href="/index.html">Documentation</a>
+                <a href="./index.html">Documentation</a>
             </li>
             <li>
                 <a href="./pages/projects.html">Projects
