--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </div>
         <div class="secondary-nav" hx-push-url="true">
             <li class="active">
-                <a href="./index.html">Documentation</a>
+                <a href="/index.html">Documentation</a>
             </li>
             <li>
-                <a href="./pages/projects.html">Projects
+                <a href="/pages/projects.html">Projects
             </li>
             <li>
                 <a hx-get="/pages/community.html" hx-target=".main-container">community</a>
