--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <body>
     <header>
+        <div class="menu">
+            <img src="./icons/menu.svg" alt="menu" class="icon" onclick="toggleMenu()">
+        </div>
         <div class="brand">
             <img src="./icons/linux-mint.svg" alt="logo" class="logo" id="logo" />
             <p>Mint</p>
@@ -33,7 +36,7 @@
     </header>
     <section class="main-container">
         <!-- topics nav  -->
-        <nav></nav>
+        <nav class="showMenu"></nav>
 
         <main>
             <div class="container"></div>
