added projects and community pages

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             </li>
             <li>
                 <a href="/pages/projects.html">Projects
+                </a>
             </li>
             <li>
-                <a hx-get="/pages/community.html" hx-target=".main-container">community</a>
+                <a href="./pages/community.html">community</a>
             </li>
         </div>
     </header>
-    <section class="main-container">
+    <section class=" main-container">
         <!-- topics nav  -->
         <nav class="showMenu"></nav>
 
