--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,10 +21,10 @@
         <a href="/index.html">Documentation</a>
       </li>
       <li class="active">
-        <a hx-get="./projects.html" hx-target=".main-container">Projects
+        <a href="projects.html">Projects
       </li>
       <li>
-        <a hx-get="./pages/community.html" hx-target=".main-container">community</a>
+        <a href="community.html">community</a>
       </li>
     </div>
   </header>
@@ -37,21 +37,78 @@
           <img src="../icons/cinnamon-logo.svg" alt="cinnamon-logo" />
         </div>
         <h1 class="name">Cinnamon</h1>
-        <div class="description">this is cinnamon a desktop-environment</div>
+        <div class="description">
+          <p>
+            Cinnamon is a free and open-source desktop environment for Linux and other Unix-like operating systems,
+            which was originally based on GNOME 3, but follows traditional desktop metaphor conventions.
+
+            The development of Cinnamon began by the Linux Mint team as the result of the April 2011 release of GNOME 3,
+            in which the conventional desktop metaphor of GNOME 2 was discarded in favor of GNOME Shell. Following
+            several attempts to extend GNOME 3 so that it would suit the Linux Mint design goals through "Mint GNOME
+            Shell Extensions", the Linux Mint team eventually forked several GNOME 3 components to build an independent
+            desktop environment. This separation from GNOME was finished with the release of Cinnamon 2.0.0 on 9 October
+            2013. Applets, extensions, actions, and desklets made explicitly for Cinnamon are no longer compatible with
+            GNOME Shell.
+
+            As the distinctive factor and preeminent desktop environment for Linux Mint, Cinnamon has generally received
+            favorable coverage by the press, in particular for its ease of use and gentle learning curve. In regard to
+            its conservative design model, Cinnamon is similar to the Xfce, MATE, GNOME 2, and GNOME Flashback desktop
+            environments.
+
+          </p>
+        </div>
       </div>
       <div class="project-container">
         <div class="icon">
           <img src="../icons/xreader.svg" alt="cinnamon-logo" />
         </div>
         <h1 class="name">Xapps</h1>
-        <div class="description">this is the xapps</div>
+        <div class="description">
+          <p>
+            In 2016, Cinnamon started to use X-Apps,which are a collection of applications developed by the Linux Mint
+            team as an alternative to GNOME Core Applications but intended to work across different GTK-based desktop
+            environments such as but not limited to Cinnamon, Budgie, Pantheon, Unity, MATE, and XFCE; most of these
+            applications have a traditional user interface (UI), for example, using a menu bar instead of a
+            header-bar.Linux Mint team is currently in the process of transitioning development for X-Apps
+            applications from being part of the Linux Mint development process to being a completely independent
+            project.Most of them are forks of GNOME Core Applications:
+
+            Timeshift is a system restore utility used to undo undesired system changes through the use of snapshots via
+            BTRFS or rsync.[15]
+            Blueberry is a graphical frontend for the CLI gnome-bluetooth library.
+            Xed is a text editor based on Pluma
+            Xviewer is an image viewer based on Eye of GNOME
+            Xreader is a document viewer based on Atril
+            Xplayer is a media player based on GNOME Videos (Totem)
+            Pix is an image organizer based on gThumb
+            gnome-online-accounts-gtk is a graphical online account manager for GTK-based desktop environments other
+            than GNOME, due to recent changes in the GNOME Online Accounts package that now requires other desktop
+            environments to be based on GTK4 rather than GTK3.
+            libxapp is a Python and C-based software library that provides the resources needed for applications in the
+            X-Apps project to work across different desktop environments.
+          </p>
+        </div>
       </div>
       <div class="project-container">
         <div class="icon">
           <img src="../icons/linux-mint.svg" alt="cinnamon-logo" />
         </div>
         <h1 class="name">Linux Mint OS</h1>
-        <div class="description">this is cinnamon a desktop-environment</div>
+        <div class="description">
+          <p>
+            Linux Mint is a community-developed Linux distribution. It is based on Ubuntu and designed for x86-64 based
+            computers; another variant is based on Debian which is named Linux Mint Debian Edition (LMDE) and has both
+            64-bit and IA-32 support. The Linux Mint project started in 2006 and it has since become one of the most
+            popular Linux operating systems for desktop PCs.
+
+
+            Quick Facts Developer, OS family ...
+            Linux Mint comes bundled with a variety of free and open-source applications.It has its own
+            desktop environment, called Cinnamon,although it also offers Xfce and MATE as alternatives by
+            default.The latest release is Linux Mint 22.1 "Xia", released on January 16, 2025; as a long-term
+            support (LTS) release, it will be supported until 2029.
+          </p>
+        </div>
       </div>
 
 
