--- a/pages/community.html
+++ b/pages/community.html
@@ -32,7 +32,7 @@
 
   <section class="main-container">
     <section id="projects">
-      <h1 class="heading">Projects</h1>
+      <h1 class="heading">community</h1>
       <div class="project-container">
         <div class="icon">
           <img src="../icons/Matrix_logo.svg.png" alt="matrix-logo" />
