--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,7 +13,10 @@
 
   <header>
     <div class="brand">
-      <img src="../icons/linux-mint.svg" alt="logo" class="logo" id="logo" />
+        <picture>
+                <source srcset="../icons/mint-logo.svg" media="(prefers-color-scheme: dark)">
+                <img class="logo" src="../icons/linux-mint.svg">
+            </picture>
       <p>Mint</p>
     </div>
     <div class="secondary-nav" hx-push-url="true">
@@ -91,7 +94,10 @@
       </div>
       <div class="project-container">
         <div class="icon">
-          <img src="../icons/linux-mint.svg" alt="cinnamon-logo" />
+              <picture>
+                <source srcset="../icons/mint-logo.svg" media="(prefers-color-scheme: dark)">
+                <img class="logo" src="../icons/linux-mint.svg">
+            </picture>
         </div>
         <h1 class="name">Linux Mint OS</h1>
         <div class="description">
